Bug 118554 - CRASH: clicking outside of comments
Summary: CRASH: clicking outside of comments
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: highest critical
Assignee: Not Assigned
URL:
Whiteboard: target:6.2.0
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2018-07-05 13:51 UTC by Xisco Faulí
Modified: 2018-07-07 11:49 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
gdb bt (3.58 KB, text/plain)
2018-07-05 20:11 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-07-05 13:51:39 UTC
Steps to reproduce:
1. Open calc
2. insert a comment to a cell
3. Click outside of it

-> Crash!

Version: 6.2.0.0.alpha0+
Build ID: 0e83efbccc180c957f77291fc0fdc6dd74eae0f4
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded
Comment 1 Xisco Faulí 2018-07-05 13:53:34 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=c7f762973d21118ce3f5b0baab8850dc89bc4765

author	Noel Grandin <noel.grandin@collabora.co.uk>	2018-07-03 11:09:03 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2018-07-04 11:07:37 +0200
commit c7f762973d21118ce3f5b0baab8850dc89bc4765 (patch)
tree f529705f98e69a94d4e731a8f824ef5afa0b9de1
parent 3e837f44fc88497f9b187e72d7a542acec00df4f (diff)
loplugin:useuniqueptr in ScTabView
and remove pDrawOld, was not being used for anything useful.

Bisected with: bibisect-linux64-6.2

Adding Cc: to Noel Grandin
Comment 2 Julien Nabet 2018-07-05 20:11:20 UTC
Created attachment 143335 [details]
gdb bt

On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 3 Julien Nabet 2018-07-05 20:12:39 UTC
Let's increase importance to max since:
- it's a regression
- it's a crash
- it's easily reproduceable
- it's not a basic case
Comment 4 Commit Notification 2018-07-07 05:52:47 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e040894fbe0765883e13d51fd6d6331adb09832c

tdf#118554 sc crash clicking outside of comments

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2018-07-07 11:49:03 UTC
Verified in

Version: 6.2.0.0.alpha0+
Build ID: 363146254bd44ab82d657f2ca0293d03bd111280
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded

@Noel, Thanks for fixing this!!