tdf#118554 sc crash clicking outside of comments

regression from
    commit c7f762973d21118ce3f5b0baab8850dc89bc4765
    loplugin:useuniqueptr in ScTabView

Change-Id: If7fd580f1a2fedbc6b707f59f196cbceffc95fe3
Reviewed-on: https://gerrit.libreoffice.org/57090
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Noel Grandin <noel.grandin@collabora.co.uk>